--- a/style/style.css
+++ b/style/style.css
@@ -1,5 +1,126 @@
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+
+/* Custom styles*/
+:root {
+    --main-violet: hsl(257, 40%, 49%);
+    --soft-magenta: hsl(300, 69%, 71%);
+}
+
 * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body {
+    width: 100%;
+    min-height: 100vh;
+    background-color: #674baf;
+    background-image: url("../images/bg-desktop.svg");
+    background-repeat: no-repeat;
+    min-height: 90vh;
+    background-position: center;
+    background-size: cover;
+    position: relative;
+}
+
+.navbar {
+    width: 90%;
+    height: auto;
+    margin: 55px auto 85px auto;
+}
+
+.hero-section {
+    width: 90%;
+    margin: auto;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    color: #fff;
+}
+
+.hero-section .left-part {
+    width: 50%;
+    margin: auto;
+}
+
+.hero-section .right-part {
+    width: 50%;
+    margin-top: 65px;
+    margin-bottom: auto;
+}
+
+.hero-section h2 {
+    font-family: "Open Sans", sans-serif;
+    font-weight: 700;
+    font-size: 55px;
+    width: 90%;
+}
+
+.hero-section p {
+    font-family: "Poppins", sans-serif;
+    font-weight: 400;
+    font-size: 19px;
+    width: 90%;
+}
+
+.hero-btn button {
+    font-size: 18px;
+    padding: 16px 65px;
+    cursor: pointer;
+    margin-top: 30px;
+    letter-spacing: 1px;
+    border: none;
+    border-radius: 25px;
+    color: var(--main-violet);
+    background-color: #fff;
+    box-shadow: 0 5px 12px 5px rgba(22, 22, 22, 0.2);
+
+    transition: 0.7s;
+}
+
+.hero-btn button:hover{
+    background-color: var(--soft-magenta);
+    color: #fff;
+}
+
+.footer {
+    height: auto;
+    width: 100%;
+    min-height: 100px;
+}
+
+.social-icons {
+    position: absolute;
+    /* top: 0; */
+    bottom: 0;
+    /* bottom: -100px; */
+    left: 83%;
+    margin-bottom: 45px;
+}
+
+.social-icons i {
+    cursor: pointer;
+    transition: 0.5s;
+    font-size: 25px;
+    color: #fff;
+    border: 1px solid #fff;
+    border-radius: 50%;
+    padding: 25px;
+    width: 25px;
+    height: 25px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    float: left;
+}
+
+.social-icons i:not(:last-child) {
+    margin-right: 25px;
+}
+
+.social-icons i:hover {
+    color: var(--soft-magenta);
+    border-color: var(--soft-magenta);
 }
