--- a/style/style.css
+++ b/style/style.css
@@ -80,7 +80,7 @@ body {
     transition: 0.7s;
 }
 
-.hero-btn button:hover{
+.hero-btn button:hover {
     background-color: var(--soft-magenta);
     color: #fff;
 }
@@ -123,4 +123,164 @@ body {
 .social-icons i:hover {
     color: var(--soft-magenta);
     border-color: var(--soft-magenta);
+}
+
+/* Media Queries */
+@media (min-width: 1920px) {
+    body {
+        width: 1920px;
+        margin: auto;
+    }
+}
+
+@media (max-width: 1710px) {
+    .navbar {
+        width: 75%;
+    }
+
+    .hero-section .left-part {
+        width: 40%;
+    }
+
+    .hero-section img {
+        width: 500px;
+    }
+
+    .hero-section .right-part {
+        width: 40%;
+    }
+
+    .hero-section h2 {
+        font-size: 45px;
+    }
+
+    .hero-section p {
+        font-size: 16px;
+    }
+
+    .hero-btn button {
+        font-size: 16px;
+        padding: 14px 60px;
+    }
+
+    .social-icons {
+        left: 80%;
+        bottom: -55px;
+        margin-bottom: 85px;
+    }
+}
+
+@media (max-width: 1580px) {
+    body {
+        background: url("../images/bg-mobile.svg");
+        background-repeat: no-repeat;
+        background-color: #674baf;
+        background-position: center;
+        background-size: cover;
+    }
+}
+@media (max-width: 1240px) {
+    body {
+        background: url("../images/bg-mobile.svg");
+        background-repeat: no-repeat;
+        background-color: #674baf;
+        background-position: center;
+        background-size: cover;
+    }
+
+    .navbar {
+        width: 80%;
+    }
+
+    .hero-section {
+        flex-direction: column;
+        text-align: center;
+    }
+
+    .hero-section .left-part {
+        width: 80%;
+    }
+
+    .hero-section .right-part {
+        width: 80%;
+    }
+
+    .hero-section h2 {
+        margin: auto;
+    }
+
+    .hero-section p {
+        margin: auto;
+    }
+
+    .hero-btn button {
+        margin: auto;
+        margin-top: 30px;
+    }
+
+    .social-icons {
+        position: static;
+        left: 0;
+        right: 0;
+        margin: 45px auto;
+    }
+
+    .footer {
+        min-height: 120px;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+    }
+}
+
+@media (max-width: 680px) {
+    .navbar img {
+        width: 150px;
+        height: auto;
+    }
+
+    .hero-section .left-part {
+        width: 90%;
+    }
+
+    .hero-section .right-part {
+        width: 90%;
+    }
+
+    .hero-section img {
+        width: 350px;
+    }
+    .hero-section h2 {
+        font-size: 35px;
+    }
+
+    .hero-section p {
+        font-size: 14px;
+        margin: 25px auto;
+    }
+
+    .social-icons i {
+        font-size: 20px;
+        padding: 20px;
+    }
+
+    .hero-btn button {
+        font-size: 16px;
+        padding: 14px 50px;
+    }
+}
+
+@media (max-width: 430px) {
+    .hero-section img {
+        width: 300px;
+    }
+    .hero-section h2 {
+        font-size: 25px;
+    }
+
+    .hero-section p {
+        font-size: 12px;
+        margin: 25px auto;
+    }
 }
